# jlo

./: Cargo.toml  README.md  install.sh  jlo-autoload.sh  jlo-init.sh
.github/workflows/: build.yml
src/: adoptium.rs  conf.rs  download.rs  extract.rs  main.rs
tests/: test.rs
