[package]
name = "jlo"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Siegmar <oliver@siegmar.de>"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
indicatif = "0.18"
flate2 = "1.1"
tar = "0.4"
tempfile = "3.19"
sha2 = "0.10.9"
hex = "0.4.3"
serde_json = "1.0"
zip = "5.1.1"
