[package]
name = "jlo-bin"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Siegmar <oliver@siegmar.de>"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
indicatif = "0.18.0"
flate2 = "1.1.4"
tar = "0.4"
tempfile = "3.23.0"
sha2 = "0.10.9"
hex = "0.4.3"
serde_json = "1.0.145"
zip = "6.0.0"
semver_rs = "0.2.0"
